GUI-2543: Avoid threshold/dimensions nowrap styling in scaling policies table to avoid breaking outside of container

--- a/eucaconsole/static/sass/pages/scalinggroup.scss
+++ b/eucaconsole/static/sass/pages/scalinggroup.scss
@@ -67,12 +67,6 @@ table.table.scaling-policies {
         margin-top: 4px;
         margin-bottom: 4px;
     }
-    .dimension-item {
-        white-space: nowrap;
-    }
-    .threshold {
-        white-space: nowrap;
-    }
 }
 
 // Scaling group instances page
